<resources>
    <string name="app_name">canvas_path</string>
    <string name="app_name2">canvas_path2</string>
    <string name="hello_world">Hello world!</string>
    <string name="aqi">空气质量指数</string>
    <string name="co">一氧化碳浓度</string>
    <string name="no2">二氧化氮浓度</string>
    <string name="o3">臭氧浓度</string>
    <string name="pm10">pm10</string>
    <string name="pm25">主要污染物</string>
    <string name="qlty">空气质量描述</string>
    <string name="so2">二氧化硫浓度</string>
    <string name="air_suggestion">空气指数</string>
    <string name="comf_suggestion">舒适指数</string>
    <string name="cw_suggestion">洗车指数</string>
    <string name="drsg_suggestion">穿衣指数</string>
    <string name="flu_suggestion">感冒指数</string>
    <string name="sport_suggestion">运动指数</string>
    <string name="trav_suggestion">旅游指数</string>
    <string name="uv_suggestion">紫外线指数</string>
    <string name="degree0">空缺</string>
    <string name="degree1">完美</string>
    <string name="degree2">满足</string>
    <string name="degree3">可以</string>
    <string name="degree4">不足</string>
    <string name="degree5">不满</string>

    <string name="history_today">历史上的今天</string>
    <string name="huodong_list">活动列表</string>
    <!-- 活动的四中状态-->
    <string name="doing">进行中</string>
    <string name="todo">未开始</string>
    <string name="done">已完成</string>
    <string name="delete">删除...</string>
    <string name="droped">已丢弃</string>
    <string name="switch_to">移动到...</string>

</resources>
