<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/prevMonth"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:src="@mipmap/prev_month" />

        <TextView
            android:id="@+id/currentMonth"
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:layout_weight="3"
            android:gravity="center"
            android:text="2014年6月"
            android:textColor="#177ed6"
            android:textSize="18dp" />

        <ImageView
            android:id="@+id/nextMonth"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:src="@mipmap/next_month" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:background="#ffffffff">

        <TextView
            style="@style/weekName"
            android:text="日"
            android:textColor="#177ed6" />

        <TextView
            style="@style/weekName"
            android:text="一" />

        <TextView
            style="@style/weekName"
            android:text="二" />

        <TextView
            style="@style/weekName"
            android:text="三" />

        <TextView
            style="@style/weekName"
            android:text="四" />

        <TextView
            style="@style/weekName"
            android:text="五" />

        <TextView
            style="@style/weekName"
            android:text="六"
            android:textColor="#177ed6" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#ff8091a8" />

    <ViewFlipper
        android:id="@+id/flipper"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp"
        android:background="#ffffffff"
        android:orientation="horizontal">

        <RelativeLayout
            android:id="@+id/layout_nongli"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginLeft="@dimen/text_nongli_marginleft"
            android:orientation="vertical">

            <TextView
                android:id="@+id/text_nongli"
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/text_jieri"
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:layout_below="@id/text_nongli"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/nongli_spector"
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:layout_below="@id/text_nongli"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_toRightOf="@id/text_jieri"
                android:text="|"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/text_lifa"
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:layout_below="@id/text_nongli"
                android:layout_toRightOf="@id/nongli_spector"
                android:textSize="15sp" />

            <LinearLayout
                android:id="@+id/new_event"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentEnd="true"
                android:orientation="horizontal"></LinearLayout>
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:id="@+id/layout_history_today"
            android:background="#ffffffff"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:gravity="center"
                android:text="@string/history_today"
                android:textSize="17sp"
                android:textStyle="bold" />

            <ListView
                android:id="@+id/list_history_today"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:padding="5dp">
            </ListView>
        </LinearLayout>

        <ImageView
            android:id="@+id/spector_history_huodong"
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:background="@color/none"
            android:visibility="visible" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:id="@+id/planing"
            android:background="#ffffffff"
            android:orientation="vertical"
            android:visibility="visible">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="20dp"
                    android:gravity="center"
                    android:layout_marginLeft="5dp"
                    android:layout_alignParentLeft="true"
                    android:text="@string/huodong_list"
                    android:textSize="17sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="20dp"
                    android:layout_alignParentRight="true"
                    android:gravity="center"
                    android:text="@string/done"
                    android:clickable="true"
                    android:background="@drawable/state_of_event"
                    android:layout_marginRight="5dp"
                    android:id="@+id/state_of_event"
                    android:textSize="17sp" />
            </RelativeLayout>

            <ListView
                android:id="@+id/huodong_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:padding="5dp">
            </ListView>
        </LinearLayout>
    </LinearLayout>


</LinearLayout>